package com.yangsx95.proxy.dynamic.cglib;

public class RealSubject {
    
    public void request() {
        System.out.println("我是realRequest方法");
    }
    
}
